name:                maze-server
version:             0.1.0.0
synopsis:            JSON API for generating mazes
description:         Please see README.md
homepage:            https://github.com/omnimike/maze-server#readme
license:             BSD3
license-file:        LICENSE
author:              Michael FUlthorp
maintainer:          michael.fulthorp@gmail.com
copyright:           2016 Michael Fulthorp
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MazeGen
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , random
  default-language:    Haskell2010

executable maze-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , scotty
                     , random
                     , maze-server
  default-language:    Haskell2010

test-suite maze-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , maze-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/omnimike/maze-server
